[package]
name = "bioswarm-engine"
version = "3.0.0"
edition = "2021"
authors = ["Sayuru Akash <sayuru555@gmail.com>"]
description = "Production-ready BioSwarm multi-source intelligence engine"
license = "MIT"
rust-version = "1.75"
repository = "https://github.com/sayuru-akash/bioswarm-engine"
homepage = "https://github.com/sayuru-akash/bioswarm-engine"
readme = "README.md"
keywords = ["ai", "agents", "research", "cli", "intelligence"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
rusqlite = { version = "0.30", features = ["bundled", "chrono", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
tokio = { version = "1.35", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
actix-web = "4.4"
csv = "1.3"
indicatif = "0.17"
comfy-table = "7.1"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
insta = { version = "1.39", features = ["json"] }

[[bin]]
name = "bioswarm"
path = "src/main.rs"

[[bin]]
name = "bioswarm-server"
path = "src/server.rs"
